--- a/DL/1_3_iris.ipynb
+++ b/DL/1_3_iris.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "from sklearn.datasets import load_iris"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -43,7 +43,7 @@
       "source": [
         "iris = load_iris()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,7 +55,7 @@
         "x = iris.data\n",
         "y = iris.target"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,12 +65,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f3625b04-f1df-4fdf-fa2d-b84d8b11dfe2"
+        "outputId": "aef41ea0-78b1-4b04-d8c5-9ee2fd6ca964"
       },
       "source": [
         "x.shape, y.shape"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +80,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 19
         }
       ]
     },
@@ -91,12 +91,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "98eeaa18-b74f-4b38-b442-4294964f66bf"
+        "outputId": "e08251b3-6958-4797-ec87-e18afef43d4a"
       },
       "source": [
         "y"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -112,7 +112,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 20
         }
       ]
     },
@@ -123,12 +123,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "867fab77-a6e9-4eb0-805b-5924d20a50b8"
+        "outputId": "b703a30f-9e3c-4a90-b8ce-6eaefb7932c9"
       },
       "source": [
         "iris.target_names"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +138,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 21
         }
       ]
     },
@@ -151,7 +151,7 @@
         "# One-Hot Encoding\n",
         "from tensorflow.keras.utils import to_categorical"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
       "source": [
         "y = to_categorical(y, 3)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,12 +172,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ac50e0e4-d274-4bfc-e3d6-a441bc2aae01"
+        "outputId": "c3637d0c-1bb2-498e-d456-c93a1d16b78b"
       },
       "source": [
         "x.shape, y.shape"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +187,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 24
         }
       ]
     },
@@ -227,7 +227,7 @@
         "# 4. 컴파일\n",
         "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,9 +242,9 @@
           "height": 392
         },
         "id": "hd7mi5lyoyVk",
-        "outputId": "58fab3d6-2d1d-4801-8454-ada645f4c1a4"
+        "outputId": "40a23cd9-c720-45b5-c4ca-85bb50ee25e8"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 26
         }
       ]
     },
@@ -283,48 +283,48 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8ced83ed-eed5-485d-d0f3-fb24b7a28f63"
+        "outputId": "9b7f34f1-6b7f-47d2-d422-c7f91d765832"
       },
       "source": [
         "model.fit(x, y, epochs=10, verbose=1)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "5/5 [==============================] - 1s 7ms/step - loss: 2.5526 - accuracy: 0.6267\n",
+            "5/5 [==============================] - 1s 3ms/step - loss: 3.1239 - accuracy: 0.3333\n",
             "Epoch 2/10\n",
-            "5/5 [==============================] - 0s 7ms/step - loss: 2.4879 - accuracy: 0.6400\n",
+            "5/5 [==============================] - 0s 3ms/step - loss: 3.0475 - accuracy: 0.3333\n",
             "Epoch 3/10\n",
-            "5/5 [==============================] - 0s 10ms/step - loss: 2.4268 - accuracy: 0.6467\n",
+            "5/5 [==============================] - 0s 3ms/step - loss: 2.9722 - accuracy: 0.3333\n",
             "Epoch 4/10\n",
-            "5/5 [==============================] - 0s 6ms/step - loss: 2.3672 - accuracy: 0.6667\n",
+            "5/5 [==============================] - 0s 3ms/step - loss: 2.9014 - accuracy: 0.3333\n",
             "Epoch 5/10\n",
-            "5/5 [==============================] - 0s 6ms/step - loss: 2.3064 - accuracy: 0.6667\n",
+            "5/5 [==============================] - 0s 4ms/step - loss: 2.8317 - accuracy: 0.3333\n",
             "Epoch 6/10\n",
-            "5/5 [==============================] - 0s 4ms/step - loss: 2.2488 - accuracy: 0.6667\n",
+            "5/5 [==============================] - 0s 4ms/step - loss: 2.7593 - accuracy: 0.3333\n",
             "Epoch 7/10\n",
-            "5/5 [==============================] - 0s 22ms/step - loss: 2.1917 - accuracy: 0.6667\n",
+            "5/5 [==============================] - 0s 3ms/step - loss: 2.6979 - accuracy: 0.3333\n",
             "Epoch 8/10\n",
-            "5/5 [==============================] - 0s 10ms/step - loss: 2.1354 - accuracy: 0.6667\n",
+            "5/5 [==============================] - 0s 3ms/step - loss: 2.6319 - accuracy: 0.3333\n",
             "Epoch 9/10\n",
-            "5/5 [==============================] - 0s 7ms/step - loss: 2.0806 - accuracy: 0.6667\n",
+            "5/5 [==============================] - 0s 3ms/step - loss: 2.5685 - accuracy: 0.3333\n",
             "Epoch 10/10\n",
-            "5/5 [==============================] - 0s 8ms/step - loss: 2.0282 - accuracy: 0.6667\n"
+            "5/5 [==============================] - 0s 5ms/step - loss: 2.5082 - accuracy: 0.3333\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f0a463f6e10>"
+              "<keras.callbacks.History at 0x7ff4bf90c090>"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 27
         }
       ]
     },
@@ -336,7 +336,7 @@
       "metadata": {
         "id": "wpNCAKYRk69J"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -349,23 +349,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ypp6l5Qo5UA",
-        "outputId": "7b29eed2-a7b4-4383-9254-d37ee65de8e7"
+        "outputId": "faa48d83-a5cc-4b92-ea02-95e50b2a2acc"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.7888691 , 0.0304503 , 0.1806806 ],\n",
-              "       [0.72369057, 0.03865166, 0.23765776],\n",
-              "       [0.7589163 , 0.03835605, 0.20272762],\n",
-              "       [0.70953363, 0.04104023, 0.24942616],\n",
-              "       [0.7968773 , 0.03028892, 0.17283374]], dtype=float32)"
+              "array([[0.10797418, 0.00200479, 0.8900211 ],\n",
+              "       [0.10556998, 0.0034266 , 0.8910034 ],\n",
+              "       [0.12389728, 0.00324666, 0.8728561 ],\n",
+              "       [0.1533387 , 0.00432116, 0.8423402 ],\n",
+              "       [0.12213477, 0.00201879, 0.8758465 ]], dtype=float32)"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 29
         }
       ]
     },
@@ -379,9 +379,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ISuVQzeZo7TW",
-        "outputId": "03aac81e-b20f-403b-81f6-c013ac671704"
+        "outputId": "d081ea49-cad2-488d-93d5-ea32ce871a10"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +395,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 30
         }
       ]
     },
@@ -411,13 +411,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5aVZkBukdQ8u"
+        "id": "5aVZkBukdQ8u",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "18f328e0-ef38-4e49-c3fd-b09a0756f3d7"
       },
       "source": [
         "x.shape, y.shape"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((150, 4), (150, 3))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -425,7 +440,14 @@
         "id": "YaAA7ytbbOlQ"
       },
       "source": [
-        ""
+        "keras.backend.clear_session()\n",
+        "\n",
+        "a = keras.layers.Input(shape=(4,))\n",
+        "b = keras.layers.Dense(3, activation='softmax')(a)\n",
+        "\n",
+        "model = keras.models.Model(a,b)\n",
+        "\n",
+        "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
       ],
       "execution_count": null,
       "outputs": []
@@ -433,11 +455,126 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NNl2wE-3eJ3u"
+        "id": "NNl2wE-3eJ3u",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e9fba3a6-571e-4624-b82c-88be119c0c18"
       },
+      "source": [
+        "model.fit(x, y, epochs=10, verbose=1)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "5/5 [==============================] - 1s 4ms/step - loss: 3.0031 - accuracy: 0.3333\n",
+            "Epoch 2/10\n",
+            "5/5 [==============================] - 0s 6ms/step - loss: 2.9549 - accuracy: 0.3333\n",
+            "Epoch 3/10\n",
+            "5/5 [==============================] - 0s 4ms/step - loss: 2.9087 - accuracy: 0.3333\n",
+            "Epoch 4/10\n",
+            "5/5 [==============================] - 0s 4ms/step - loss: 2.8611 - accuracy: 0.3333\n",
+            "Epoch 5/10\n",
+            "5/5 [==============================] - 0s 4ms/step - loss: 2.8166 - accuracy: 0.3333\n",
+            "Epoch 6/10\n",
+            "5/5 [==============================] - 0s 8ms/step - loss: 2.7730 - accuracy: 0.3333\n",
+            "Epoch 7/10\n",
+            "5/5 [==============================] - 0s 4ms/step - loss: 2.7316 - accuracy: 0.3333\n",
+            "Epoch 8/10\n",
+            "5/5 [==============================] - 0s 4ms/step - loss: 2.6908 - accuracy: 0.3333\n",
+            "Epoch 9/10\n",
+            "5/5 [==============================] - 0s 4ms/step - loss: 2.6507 - accuracy: 0.3333\n",
+            "Epoch 10/10\n",
+            "5/5 [==============================] - 0s 4ms/step - loss: 2.6109 - accuracy: 0.3333\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7ff4be718e50>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = model.predict(x)\n",
+        "y_pred.argmax(axis=1)"
+      ],
+      "metadata": {
+        "id": "IrTVrPTkzEZS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a0d0d2b2-9f3b-4fce-c2e4-6a5b1be0f2f7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+              "       1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+              "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+              "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+              "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+              "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mq41w465zcTe",
+        "outputId": "acd89d5e-9cda-47c8-d6f6-6e14886e029c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 0., 0.],\n",
+              "       [1., 0., 0.],\n",
+              "       [1., 0., 0.],\n",
+              "       [1., 0., 0.],\n",
+              "       [1., 0., 0.]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
       ],
+      "metadata": {
+        "id": "FTgmngFdzgUG"
+      },
       "execution_count": null,
       "outputs": []
     }
